# libbarcode

./: .gitignore  CMakeLists.txt  README.md
inc/: config.h
src/: codabar.c
